--- a/pages/about/thoughts/thoughts_2020-04-01.md
+++ b/pages/about/thoughts/thoughts_2020-04-01.md
@@ -3,7 +3,7 @@ title: Boredom
 keywords: android, app, google map
 last_updated: April 1, 2020
 sidebar: mydoc_sidebar
-permalink: thoughts_2020_04_01.html
+permalink: thoughts_2020-04-01.html
 folder: mydoc
 comments: true
 ---
