--- a/pages/algorithm/advent_of_code_2024/7.md
+++ b/pages/algorithm/advent_of_code_2024/7.md
@@ -4,7 +4,7 @@ last_updated: Dec 10, 2024
 keywords: algorithm
 sidebar: mydoc_sidebar
 comments: true
-permalink: 7.html
+permalink: advent_of_code_2024-day7.html
 
 ---
 
