--- a/pages/algorithm/advent_of_code_2024/8.md
+++ b/pages/algorithm/advent_of_code_2024/8.md
@@ -4,7 +4,7 @@ last_updated: Dec 10, 2024
 keywords: algorithm
 sidebar: mydoc_sidebar
 comments: true
-permalink: 8.html
+permalink: advent_of_code_2024-day5.html
 
 ---
 
