Revert "should work"
This reverts commit 8e60279de45cdcd613812a8d70b45896008b9c98.

--- a/pages/algorithm/advent_of_code_2024/5.md
+++ b/pages/algorithm/advent_of_code_2024/5.md
@@ -4,7 +4,7 @@ last_updated: Dec 6, 2024
 keywords: algorithm
 sidebar: mydoc_sidebar
 comments: true
-permalink: advent_of_code_2024-day5.html
+permalink: 5.html
 
 ---
 
